src/objects/IntegrationDetail_CF__c.object
<CustomObject>
    <description>This object stores all the request and response bodies for each callout made on the system.</description>
    <fields>
        <fullName>Endpoint_CF__c</fullName>
        <description>The endpoint that has been invoked.</description>
        <inlineHelpText>The endpoint that has been invoked.</inlineHelpText>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ExternalId_CF__c</fullName>
        <description>External Id.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LinkerId_CF__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field which helps to relate request with response data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Field which helps to relate request with response data.</inlineHelpText>
        <label>Linker Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RequestBody_CF__c</fullName>
        <description>Request Body.</description>
        <inlineHelpText>Request Body.</inlineHelpText>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseBody_CF__c</fullName>
        <description>Response Body.</description>
        <inlineHelpText>Response Body.</inlineHelpText>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseCode_CF__c</fullName>
        <description>Response Code.</description>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusCode_CF__c</fullName>
        <description>The HTTP Status Code which gets issued by a server in response to a client&apos;s request made to the server.</description>
        <inlineHelpText>The HTTP Status Code which gets issued by a server in response to a client&apos;s request made to the server.</inlineHelpText>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{00000000}</displayFormat>
        <label>Integration Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>